# dirty-cow-rs

./: .gitignore  Cargo.toml  DirtyCowExecutionSteps.txt  README.md  restore_root_passwd.py
src/: cowrehab.rs  cowroot.rs  cowrootstable.rs  cowsetuid.rs  cowsetuid_chunks.rs  dirtyfix.rs  exploit.rs  main.rs  rustetcpivot.rs  whynot.rs  whynotannoted.rs
