[package]
name = "dirtycow"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "1.0.0-alpha.3"

[[bin]]
name = "dirtycow"
path = "src/main.rs"

[[bin]]
name = "dirtyfix"
path = "src/dirtyfix.rs"

[[bin]]
name = "cowroot"
path = "src/cowroot.rs"

[[bin]]
name = "cowrootstable"
path = "src/cowrootstable.rs"
